--- a/hw_03/style.css
+++ b/hw_03/style.css
@@ -56,7 +56,8 @@ body {
     line-height: 20px;
     letter-spacing: 0em;
     text-align: left;
-    padding-top: 20px;
+    margin-top: 20px;
+    margin-left: 5px;
 }
 .second-cookie {
     width: 1440px;
